--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,17 @@
-// TODO
+.headerContainer {
+    height: 6.5rem;
+}
+
+.headerContent {
+    max-width: 720px;
+    height: 6.5rem;
+    margin: 0 auto;
+    padding: 0 2rem;
+
+    display: flex;
+    align-items: end;
+
+    a {
+        display: flex;
+    }
+}
