--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,56 @@
   padding: 0;
 }
 
-// TODO
+:root {
+  --white: #F8F8F8;
+
+  --gray-200: #D7D7D7;
+  --gray-300: #BBBBBB;
+
+  --black-800: #1A1D23;
+
+  --pink: #FF57B2;
+}
+
+@media (max-width: 1080px) {
+  html {
+      font-size: 93.75%;
+  }
+}
+@media (max-width: 720px) {
+  html {
+      font-size: 87.5%;
+  }
+}
+
+body {
+  background: var(--black-800);
+  color: var(--white);
+}
+
+body, input, select, textarea, button {
+  font: 400 1rem "Inter", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #5f6368;
+  border-radius: 30px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #202124;
+  border-radius: 30px;
+}
