--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -3,13 +3,13 @@
 }
 
 .headerContent {
-    max-width: 720px;
+    max-width: 780px;
     height: 6.5rem;
     margin: 0 auto;
     padding: 0 2rem;
 
     display: flex;
-    align-items: end;
+    align-items: center;
 
     a {
         display: flex;
