--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,70 @@
-// TODO
+.imgContainer {
+    width: 100%;
+
+    img {
+        width: 100%;
+        height: auto;
+        max-height: 25rem;
+    }
+}
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 2rem;
+}
+
+.post {
+    max-width: 720px;
+    margin: 5rem auto;
+
+    h1 {
+        font-size: 3rem;
+        font-weight: 700;
+        line-height: 3.625rem;
+    }
+
+    .info {
+        margin-top: 1.5rem;
+        height: 1.25rem;
+        display: flex;
+        color: var(--gray-300);
+
+        time {
+            display: flex;
+            align-items: center;
+            font-size: 0.875rem;
+        }
+
+        span {
+            display: flex;
+            align-items: center;
+            margin-left: 1.5rem;
+            font-size: 0.875rem;
+        }
+    }
+
+    .postContent {
+        margin-top: 4rem;
+        line-height: 1.5625rem;
+        font-size: 1.125rem;
+        color: var(--gray-200);
+
+        & + h1, h2, h3, h4, h5, h6 {
+            color: var(--white);
+            margin: 4rem 0;
+        }
+
+        p, ul {
+            margin: 1.5rem 0;
+        }
+
+        ul {
+            padding-left: 1.5rem;
+
+            li {
+                margin: 0.5rem 0;
+            }
+        }
+    }
+}
